# solidrt

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  KNOWN_ISSUES.md  Makefile  README.md  package.json  tsconfig.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  quick-check.yml  release.yml
alloy/: CLAUDE.md  Cargo.toml
alloy/examples/: basic.rs
alloy/src/: app.rs  backend.rs  context.rs  event.rs  gl.rs  lib.rs  logging.rs  main.rs  sdl_utils.rs  texture.rs
alloy/src/display/: gl.rs  mod.rs
alloy/src/gpu/: backend.rs  gl.rs  mod.rs
docs/: api.md
examples/: grid.tsx  recurse.tsx
flux/: CLAUDE.md  Cargo.toml  Makefile  README.md
flux/examples/: custom_logger.rs  custom_plugin.rs  plugin.rs
flux/src/: channels.rs  console.rs  engine.rs  io.rs  lib.rs  logger.rs  main.rs  pending.rs  timer.rs
flux/src/plugins/: console.rs  events.rs  fetch.rs  io.rs  memory.rs  mod.rs  timer.rs
flux/src/plugins/flux/: events.rs
flux/tests/: console.rs  events.rs  js_standard.rs  memory.rs  promises.rs  timers.rs
lattice/: Cargo.toml  Makefile  Makefile.android  Makefile.darwin  Makefile.linux  Makefile.windows  Makefile.x-android
lattice/android/: .gitignore  gradle.properties
lattice/android/app/: build.gradle
lattice/android/app/src/dev/: AndroidManifest.xml
lattice/android/app/src/dev/java/com/solidrt/app/: QrScanner.java
lattice/android/app/src/go/java/com/solidrt/app/: MainActivity.java
lattice/android/app/src/main/: AndroidManifest.xml
lattice/android/app/src/main/res/values/: strings.xml
lattice/default-app/: app.srt.js  app.tsx  logo.tsx
lattice/src/: frame.rs  go.rs  lib.rs  main.rs  overlay.rs
lattice/src/plugins/: draw.rs  mod.rs  tree.rs
lattice/src/rendertree/: composite.rs  hit.rs  layout.rs  mod.rs  platform.rs  render_tree.rs  tree.rs
lattice/src/rendertree/kinds/: mod.rs  paint.rs  path.rs  rectangle.rs  span.rs  text.rs  view.rs  window.rs
lattice/src/rendertree/layout/: context.rs  mod.rs  properties.rs  util.rs
