[workspace]
members = [
  "alloy",
  "flux", 
  "lattice",
]
resolver = "2"

[workspace.dependencies]
alloy = { path = "alloy" }
flux = { path = "flux" }
rquickjs = { version = "0.11.0", features = ["bindgen", "rust-alloc", "futures", "macro", "loader"] }
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "time"] }
