[workspace]
members = [
  "alloy",
  "flux", 
  "lattice",
]
resolver = "2"

[workspace.dependencies]
alloy = { path = "alloy" }
flux = { path = "flux" }
log = "0.4"
rquickjs = { version = "0.11.0", features = ["bindgen", "rust-alloc", "futures", "macro", "loader"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "time", "sync", "net"] }
