[package]
name = "alloy"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic"

[target.'cfg(target_os = "android")'.dependencies]
impellers = { version = "0.4.1", features = ["prebuilt_libs", "sys"] }
sdl3 = { version = "0.18.0", features = ["build-from-source"] }
wgpu = { version = "29", features = ["gles"] }

[target.'cfg(target_os = "macos")'.dependencies]
impellers = { version = "0.4.1", features = ["prebuilt_libs", "sys"] }
sdl3 = { version = "0.18.0", features = ["build-from-source-static"] }
wgpu = { version = "29", features = ["gles", "angle"] }

[target.'cfg(target_os = "linux")'.dependencies]
impellers = { version = "0.4.1", features = ["prebuilt_libs", "sys", "static_link"] }
sdl3 = { version = "0.18.0", features = ["build-from-source-static"] }
wgpu = { version = "29", features = ["gles"] }

[target.'cfg(target_os = "windows")'.dependencies]
impellers = { version = "0.4.1", features = ["prebuilt_libs", "sys", "static_link"] }
sdl3 = { version = "0.18.0", features = ["build-from-source-static"] }
# "angle" feature omitted: SDL provides the GL context using the ANGLE DLLs we ship,
# letting wgpu wrap it via new_external(). Enabling wgpu's own ANGLE bundled a second
# copy and caused conflicts.
wgpu = { version = "29", features = ["gles"] }

[dependencies]
log = { workspace = true }
pollster = "0.4"