[package]
name = "qjsrt"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "qjsrt"
path = "src/lib.rs"

[[bin]]
name = "qjsrt"
path = "src/main.rs"

[features]
default = ["script"]
script = []

[dependencies]
rquickjs = { version = "0.11.0", features = ["rust-alloc", "futures", "macro", "loader"] }
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
