[package]
name = "flux"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "flux"
path = "src/lib.rs"

[[bin]]
name = "flux"
path = "src/main.rs"
required-features = ["compile"]

[features]
default = ["compile"]
compile = []

[dependencies]
rquickjs = { version = "0.11.0", features = ["rust-alloc", "futures", "macro", "loader"] }
tokio = { workspace = true, features = ["sync", "time", "fs", "io-util", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
