[package]
name = "lattice"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "solidrt-go"
path = "src/main.rs"
required-features = ["go"]

[[bin]]
name = "solidrt-runner"
path = "src/main.rs"

[features]
#TODO drop the default compile
default = ["flux/compile"]
go = ["flux/compile"]

[dependencies]
alloy = { workspace = true }
flux = { workspace = true, default-features = false }
half = "2.7.1"
rquickjs = { workspace = true }
taffy = "0.9.2"
tokio = { workspace = true }
