[package]
name = "lattice"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "solidrt-go"
path = "src/main.rs"
required-features = ["go"]

[[bin]]
name = "solidrt-runner"
path = "src/main.rs"

[features]
#TODO drop the default compile
default = ["flux/compile"]
go = ["flux/compile", "dep:tokio-websockets", "dep:futures-util", "dep:http", "dep:serde_json"]

[dependencies]
alloy = { workspace = true }
log = { workspace = true }
flux = { workspace = true, default-features = false }
half = "2.7.1"
rquickjs = { workspace = true }
taffy = "0.9.2"
tokio = { workspace = true }
tokio-websockets = { version = "0.12", features = ["client", "fastrand", "sha1_smol"], optional = true }
futures-util = { version = "0.3", features = ["sink"], optional = true }
http = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
